Cursus/Libft/libft-war-machine-master/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
c1r13s3.42madrid.com
Darwin 18.6.0 x86_64
$> date
martes,  5 de julio de 2022, 17:39:08 CEST
$> gcc --version
Apple clang version 11.0.0 (clang-1100.0.33.17)
Target: x86_64-apple-darwin18.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple clang version 11.0.0 (clang-1100.0.33.17)
Target: x86_64-apple-darwin18.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'

= Compiling libft ==============================================================
$> make re
rm -f ./ft_atoi.o ./ft_bzero.o ./ft_calloc.o ./ft_isalnum.o ./ft_isalpha.o ./ft_isascii.o ./ft_isdigit.o ./ft_isprint.o ./ft_memchr.o ./ft_memcmp.o ./ft_memcpy.o ./ft_memmove.o ./ft_memset.o ./ft_strchr.o ./ft_strdup.o ./ft_strlcat.o ./ft_strlcpy.o ./ft_strlen.o ./ft_strncmp.o ./ft_strnstr.o ./ft_strrchr.o ./ft_tolower.o ./ft_toupper.o 
gcc -Wall -Wextra -Werror -c -o ft_atoi.o ft_atoi.c
gcc -Wall -Wextra -Werror -c -o ft_bzero.o ft_bzero.c
gcc -Wall -Wextra -Werror -c -o ft_calloc.o ft_calloc.c
gcc -Wall -Wextra -Werror -c -o ft_isalnum.o ft_isalnum.c
gcc -Wall -Wextra -Werror -c -o ft_isalpha.o ft_isalpha.c
gcc -Wall -Wextra -Werror -c -o ft_isascii.o ft_isascii.c
gcc -Wall -Wextra -Werror -c -o ft_isdigit.o ft_isdigit.c
gcc -Wall -Wextra -Werror -c -o ft_isprint.o ft_isprint.c
gcc -Wall -Wextra -Werror -c -o ft_memchr.o ft_memchr.c
gcc -Wall -Wextra -Werror -c -o ft_memcmp.o ft_memcmp.c
gcc -Wall -Wextra -Werror -c -o ft_memcpy.o ft_memcpy.c
gcc -Wall -Wextra -Werror -c -o ft_memmove.o ft_memmove.c
gcc -Wall -Wextra -Werror -c -o ft_memset.o ft_memset.c
gcc -Wall -Wextra -Werror -c -o ft_strchr.o ft_strchr.c
gcc -Wall -Wextra -Werror -c -o ft_strdup.o ft_strdup.c
gcc -Wall -Wextra -Werror -c -o ft_strlcat.o ft_strlcat.c
gcc -Wall -Wextra -Werror -c -o ft_strlcpy.o ft_strlcpy.c
gcc -Wall -Wextra -Werror -c -o ft_strlen.o ft_strlen.c
gcc -Wall -Wextra -Werror -c -o ft_strncmp.o ft_strncmp.c
gcc -Wall -Wextra -Werror -c -o ft_strnstr.o ft_strnstr.c
gcc -Wall -Wextra -Werror -c -o ft_strrchr.o ft_strrchr.c
gcc -Wall -Wextra -Werror -c -o ft_tolower.o ft_tolower.c
gcc -Wall -Wextra -Werror -c -o ft_toupper.o ft_toupper.c
ar rcs libft.a ft_atoi.o ft_bzero.o ft_calloc.o ft_isalnum.o ft_isalpha.o ft_isascii.o ft_isdigit.o ft_isprint.o ft_memchr.o ft_memcmp.o ft_memcpy.o ft_memmove.o ft_memset.o ft_strchr.o ft_strdup.o ft_strlcat.o ft_strlcpy.o ft_strlen.o ft_strncmp.o ft_strnstr.o ft_strrchr.o ft_tolower.o ft_toupper.o

$> make bonus
make: Nothing to be done for `bonus'.

$> ls -la libft.a
-rw-r--r--  1 angmarti  2019  20920  5 jul 17:39 /Users/angmarti/Documents/42/Cursus/Libft/libft-war-machine-master/dirlibft/libft.a

= Part2_functions ==============================================================

= ft_strmapi.c =================================================================
$> norminette ft_strmapi.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_strmapi.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_strmapi", referenced from:
      _main in main-90d50c.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_substr.c ==================================================================
$> norminette ft_substr.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_substr.c main.c libft.a -o user_exe

= Test 1 ===================================================
$> ./user_exe 01
$> diff -U 3 user_output_test01 test01.output

Diff OK :D
= Test 2 ===================================================
$> ./user_exe 02
$> diff -U 3 user_output_test02 test02.output

Diff OK :D
= Test 3 ===================================================
$> ./user_exe 03
$> diff -U 3 user_output_test03 test03.output

Diff OK :D
= Test 4 ===================================================
$> ./user_exe 04
$> diff -U 3 user_output_test04 test04.output

Diff OK :D
= Test 5 ===================================================
$> ./user_exe 05
$> diff -U 3 user_output_test05 test05.output
--- /Users/angmarti/Documents/42/Cursus/Libft/libft-war-machine-master/tests/Part2_functions/ft_substr/user_output_test05	2022-07-05 17:39:10.000000000 +0200$
+++ /Users/angmarti/Documents/42/Cursus/Libft/libft-war-machine-master/tests/Part2_functions/ft_substr/test05.output	2022-01-23 01:00:40.000000000 +0100$
@@ -1 +0,0 @@$
-M-^D|^Uàþ^?$
\ No newline at end of file$

Diff KO :(

= ft_strjoin.c =================================================================
$> norminette ft_strjoin.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_strjoin.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_strjoin", referenced from:
      _main in main-0f7d5e.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_strtrim.c =================================================================
$> norminette ft_strtrim.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_strtrim.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_strtrim", referenced from:
      _main in main-5cb912.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_split.c ===================================================================
$> norminette ft_split.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_split.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_split", referenced from:
      _main in main-ce9e73.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_itoa.c ====================================================================
$> norminette ft_itoa.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_itoa.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_itoa", referenced from:
      _main in main-ad26f5.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_striteri.c ================================================================
$> norminette ft_striteri.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_striteri.c main.c libft.a -o user_exe

/Users/angmarti/Documents/42/Cursus/Libft/libft-war-machine-master/tests/Part2_functions/ft_striteri/main.c:53:3: error: implicit declaration of function 'ft_striteri' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
                ft_striteri(str, &iter);
                ^
1 error generated.

= ft_putchar_fd.c ==============================================================
$> norminette ft_putchar_fd.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_putchar_fd.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_putchar_fd", referenced from:
      _main in main-97b4da.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_putstr_fd.c ===============================================================
$> norminette ft_putstr_fd.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_putstr_fd.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_putstr_fd", referenced from:
      _main in main-244a9f.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_putendl_fd.c ==============================================================
$> norminette ft_putendl_fd.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_putendl_fd.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_putendl_fd", referenced from:
      _main in main-9fe7a9.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)

= ft_putnbr_fd.c ===============================================================
$> norminette ft_putnbr_fd.c | grep -E '(Error|Warning)'
$> clang -Wextra -Wall -Werror -g3 -fsanitize=address ft_putnbr_fd.c main.c libft.a -o user_exe

Undefined symbols for architecture x86_64:
  "_ft_putnbr_fd", referenced from:
      _main in main-d3c366.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
